# cxx-llvm

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  cxx-llvm.code-workspace  xtask.toml
.cargo/: config.toml
crates/cxx-llvm/: Cargo.toml  build.rs
crates/cxx-llvm-abi/: Cargo.toml  build.rs
crates/cxx-llvm-abi/abi/llvm/adt/: hash_code.json  string_ref.json  triple.json  twine.json
crates/cxx-llvm-abi/cxx/include/: cxx-llvm-abi.hxx
crates/cxx-llvm-abi/cxx/include/llvm/ADT/: HashCode.hxx  Hashing.hxx  SmallVector.hxx  SmallVectorBoxed.hxx  SmallVectorImpl.hxx  StringRef.hxx  Triple.hxx  Twine.hxx
crates/cxx-llvm-abi/cxx/lib/: cmake.cxx
crates/cxx-llvm-abi/src/: abi.rs
crates/cxx-llvm-abi/src/abi/llvm/: adt.rs
crates/cxx-llvm-abi/src/abi/llvm/adt/: hash_code.rs  string_ref.rs  triple.rs  twine.rs
crates/cxx-llvm-auto/: Cargo.toml  build.rs
crates/cxx-llvm-auto/auto/llvm/adt/: hash_code.json  string_ref.json  triple.json  twine.json
crates/cxx-llvm-auto/cxx/include/: cxx-llvm-auto.hxx
crates/cxx-llvm-auto/cxx/include/llvm/ADT/: HashCode.hxx  SmallVector.hxx  SmallVectorBoxed.hxx  SmallVectorImpl.hxx  StringRef.hxx  Triple.hxx  Twine.hxx
crates/cxx-llvm-auto/cxx/lib/: cmake.cxx
crates/cxx-llvm-auto/src/: lib.rs
crates/cxx-llvm-build/: Cargo.toml
crates/cxx-llvm-build-common/: Cargo.toml
crates/cxx-llvm-build-common/src/: lib.rs
crates/cxx-llvm-build/src/: lib.rs
crates/cxx-llvm/src/: abi.rs  lib.rs
crates/cxx-llvm/src/abi/llvm/: adt.rs
crates/cxx-llvm/src/abi/llvm/adt/: hash_code.rs  string_ref.rs  triple.rs  twine.rs
crates/cxx-llvm/src/ffi/llvm/adt/: hash_code.rs  small_vector.rs  small_vector_impl.rs  string_ref.rs  triple.rs  twine.rs
docker/: Dockerfile.cxx-llvm  Dockerfile.cxx-llvm-dev  README.md
xtask/: Cargo.toml
xtask/src/: main.rs
