[package]
edition = "2021"
name = "cxx-llvm-abi"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/silvanshade/cxx-llvm"
# NOTE: `links` is needed so that `cxx/include/**/*.hxx` is exported to dependencies
links = "cxx-llvm-abi"

[build-dependencies]
cxx-llvm-build = { version = "0.0", path = "../cxx-llvm-build" }
cxx-llvm-build-common = { version = "0.0", path = "../cxx-llvm-build-common" }
cxx-memory-abi = { version = "0.0", git = "https://github.com/silvanshade/cxx-memory" }

[dependencies]
cxx = { version = "1.0", features = ["c++20"] }
cxx-memory-abi = { version = "0.0", git = "https://github.com/silvanshade/cxx-memory" }
