[package]
edition = "2021"
name = "cxx-llvm-auto"
version = "0.0.2"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/silvanshade/cxx-llvm"
description = "cxx-auto generated cxx bindings for cxx-llvm"
# NOTE: `links` is needed so that `cxx/include/**/*.hxx` is exported to dependencies
links = "cxx-llvm-auto"

[build-dependencies]
cxx-auto = "0.0"
cxx-build = { version = "1.0", features = ["parallel"] }
cxx-llvm-build = { version = "0.0", path = "../cxx-llvm-build" }
cxx-llvm-build-common = { version = "0.0", path = "../cxx-llvm-build-common" }

[dependencies]
cxx = { version = "1.0", features = ["c++20"] }
cxx-auto = "0.0"
