[package]
edition = "2021"
name = "cxx-llvm-build"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/silvanshade/cxx-llvm"

[dependencies]
cxx-build = { version = "1.0", features = ["parallel"] }
cxx-llvm-build-common = { version = "0.0", path = "../cxx-llvm-build-common" }
normpath = "1.1"
