[package]
edition = "2021"
name = "cxx-llvm"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/silvanshade/cxx-llvm"

[build-dependencies]
cxx-llvm-common = { version = "0.0", path = "../../../cxx-llvm-common" }
cxx-llvm-abi = { version = "0.0", path = "../cxx-llvm-abi" }

[dependencies]
cxx = { version = "1.0", features = ["c++20"] }
cxx-memory = { version = "0.0", path = "../../../cxx-memory" }
cxx-memory-abi = { version = "0.0", path = "../../../cxx-memory-abi" }
cxx-llvm-abi = { version = "0.0", path = "../cxx-llvm-abi" }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
static_assertions = "1.1"
