[package]
edition = "2021"
name = "cxx-llvm"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/silvanshade/cxx-llvm"

[build-dependencies]
cxx-llvm-auto = { version = "0.0", path = "../cxx-llvm-auto" }
cxx-llvm-build = { version = "0.0", path = "../cxx-llvm-build" }
cxx-llvm-build-common = { version = "0.0", path = "../cxx-llvm-build-common" }

[dependencies]
cxx = { version = "1.0", features = ["c++20"] }
cxx-auto = "0.0"
cxx-llvm-auto = { version = "0.0", path = "../cxx-llvm-auto" }
moveref = { version = "0.0", path = "../../../moveref" }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
static_assertions = "1.1"
